fix scrollbar calendly

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+.calendly-inline-widget {
+  height:750px;
+}
